--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Generate documentation in markdown from postman documentation.",
   "main": "./src/index.js",
   "scripts": {
-    "test": "node ./src/test.js ./example/kmk-blog.postman_collection.json"
+    "test": "node ./src/test.js ./example/vws.postman_collection.json"
   },
   "keywords": [
     "postman",
